Update JAXB tests to use --add-modules